--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.322",
     "@iconify/tailwind4": "^1.0.6",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.17",
     "daisyui": "^5.0.9",
     "tailwindcss": "^4.0.17",
