--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,16 @@
 service: stock_monitor
 
 # Name of the container image.
-image: your-user/stock_monitor
+image: mjason/stock_monitor
+
+ssh:
+  user: mj
+  port: 2207
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 10.43.142.62
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -17,15 +21,15 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-proxy:
-  ssl: true
-  host: app.example.com
+#proxy:
+#  ssl: true
+#  host: app.example.com
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  server: ghcr.io
+  username: mjason
 
   # Always use an access token rather than real password when possible.
   password:
