--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -22,7 +22,7 @@ servers:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
-  ssl: false
+  ssl: true
   host: stock.mj0.ltd
 #  host: app.example.com
 
