--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -21,10 +21,12 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-proxy:
-  ssl: true
-  host: stock.mj0.ltd
+#proxy:
+#  ssl: true
+#  host: stock.mj0.ltd
 #  host: app.example.com
+
+proxy: false
 
 # Credentials for your image host.
 registry:
