--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,11 +2,10 @@
 service: stock_monitor
 
 # Name of the container image.
-image: mjason/stock_monitor
+image: mj0/stock_monitor
 
 ssh:
   user: mj
-  port: 2207
 
 # Deploy to these servers.
 servers:
@@ -21,18 +20,17 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-#proxy:
+proxy:
 #  ssl: false
-#  host: stock.mj0.ltd
+  host: stock.mj0.xyz
 #  host: app.example.com
 
-proxy: false
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  server: ghcr.io
-  username: mjason
+  server: crpi-hi8lvo8xjdxju6p5.cn-guangzhou.personal.cr.aliyuncs.com
+  username: hi30863908@aliyun.com
 
   # Always use an access token rather than real password when possible.
   password:
@@ -47,6 +45,7 @@ env:
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
     TUSHARE_API_KEY: 5764130045754fb99f8a2b3b245de6621475dab1470ebc75fa7dd8bf
+    STOCK_HOST: "http://172.20.104.150:8000"
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
