--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hotwired/turbo-rails": "^8.0.13",
     "lightweight-charts": "^5.0.5",
     "monaco-editor": "0.52.2",
+    "monacopilot": "^1.1.19",
     "rollup": "^4.38.0"
   }
 }
