--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -101,25 +101,25 @@ builder:
 #   user: app
 
 # Use accessory services (secrets come from .kamal/secrets).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     # Change to 3306 to expose port to the world instead of just local network.
-#     port: "127.0.0.1:3306:3306"
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
-#   redis:
-#     image: redis:7.0
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
+accessories:
+  redis:
+   image: bitnami/redis:7.0
+   user: "${UID}:${GID}"
+   env:
+     secret:
+       - REDIS_PASSWORD
+     clear:
+       ALLOW_EMPTY_PASSWORD: false
+       REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
+       REDIS_TLS_CERT_FILE: /tls/redis.crt
+       REDIS_TLS_KEY_FILE: /tls/redis.key
+       REDIS_TLS_CA_FILE: /tls/ca.crt
+       REDIS_TLS_ENABLED: yes
+       REDIS_TLS_PORT: 6379
+   port: "6379:6379"
+   directories:
+     - data:/data
+   files:
+     - config/redis_tls/redis.crt:/tls/redis.crt
+     - config/redis_tls/redis.key:/tls/redis.key
+     - config/redis_tls/ca.crt:/tls/ca.crt
