--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -12,9 +12,14 @@ servers:
   web:
     - 8.138.180.246
   job:
-   hosts:
+    hosts:
      - 8.138.180.246
-   cmd: bin/jobs
+    cmd: bin/jobs
+  subscriber:
+    hosts:
+      - 8.138.180.246
+    cmd: bin/subscriber
+
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
