--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -45,6 +45,7 @@ registry:
 env:
   secret:
     - RAILS_MASTER_KEY
+    - REDIS_PASSWORD
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
@@ -53,6 +54,7 @@ env:
     STOCK_HOST: "http://172.20.104.150:3544"
     FT07_UID: 6929
     FT07_SEND_KEY: sctp6929t6qnl2ruhcv4oz2132xdqke
+    REDIS_HOST: 8.138.180.246
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
