--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -9,10 +9,10 @@
 #     priority: 2
 #     schedule: at 5am every day
 
-default: &default
+#default: &default
 
-development:
-  <<: *default
+#development:
+#  <<: *default
 
-production:
-  <<: *default
+#production:
+#  <<: *default
